cmake_minimum_required(VERSION 3.8)
project(SFDD)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        dotG/iscas89/f=s1.dot
        dotG/test0/f2=x11_and_x3.dot
        dotG/test0/f2=x11_and_x3.dot.png
        "dotG/test0/f2=x11_xor_(x11_and_x3).dot"
        "dotG/test0/f2=x11_xor_(x11_and_x3).dot.png"
        "dotG/test0/f2=x3_xor_x11_xor_(x11_and_x3).dot"
        "dotG/test0/f2=x3_xor_x11_xor_(x11_and_x3).dot.png"
        dotG/test0/f=x11_or_x3.dot
        dotG/test0/f=x11_or_x3.dot.png
        "dotG/test0/f=x11_xor_(x11_and_x3).dot"
        "dotG/test0/f=x11_xor_(x11_and_x3).dot.png"
        dotG/test0/f=x3_and_x11.dot
        dotG/test0/f=x3_and_x11.dot.png
        "dotG/test0/f=x3_xor_x11_xor_(x11_and_x3).dot"
        "dotG/test0/f=x3_xor_x11_xor_(x11_and_x3).dot.png"
        objs/main.o
        objs/SFDD.o
        objs/test0.o
        src/define.h
        src/reader.cpp
        src/reader.h
        src/SFDD.cpp
        src/SFDD.h
        test/iscas85/c1355.cnf
        test/iscas85/c17.cnf
        test/iscas85/c1908.cnf
        test/iscas85/c2670.cnf
        test/iscas85/c3540.cnf
        test/iscas85/c432.cnf
        test/iscas85/c499.cnf
        test/iscas85/c5315.cnf
        test/iscas85/c6288.cnf
        test/iscas85/c7552.cnf
        test/iscas85/c880.cnf
        test/iscas89/s1196.scan.cnf
        test/iscas89/s1238.scan.cnf
        test/iscas89/s1423.scan.cnf
        test/iscas89/s1488.scan.cnf
        test/iscas89/s1494.scan.cnf
        test/iscas89/s208.1.scan.cnf
        test/iscas89/s27.scan.cnf
        test/iscas89/s298.scan.cnf
        test/iscas89/s344.scan.cnf
        test/iscas89/s349.scan.cnf
        test/iscas89/s382.scan.cnf
        test/iscas89/s386.scan.cnf
        test/iscas89/s400.scan.cnf
        test/iscas89/s420.scan.cnf
        test/iscas89/s444.scan.cnf
        test/iscas89/s510.scan.cnf
        test/iscas89/s526.scan.cnf
        test/iscas89/s526N.scan.cnf
        test/iscas89/s5378.scan.cnf
        test/iscas89/s641.scan.cnf
        test/iscas89/s713.scan.cnf
        test/iscas89/s832.scan.cnf
        test/iscas89/s838.1.scan.cnf
        test/iscas89/s838.scan.cnf
        test/iscas89/s9234.1.scan.cnf
        test/iscas89/s953.scan.cnf
        test/s1/s1.scan.cnf
        test/sampled/2bitcomp_5.cnf
        test/sampled/2bitmax_6.cnf
        test/sampled/4blocksb.cnf
        test/sampled/ais10.cnf
        test/sampled/bw_large.a.cnf
        test/sampled/bw_large.b.cnf
        test/sampled/C163_FW.cnf
        test/sampled/C169_FW.cnf
        test/sampled/C171_FR.cnf
        test/sampled/C210_FVF.cnf
        test/sampled/C211_FS.cnf
        test/sampled/C215_FC.cnf
        test/sampled/C230_FR.cnf
        test/sampled/C250_FW.cnf
        test/sampled/C638_FKA.cnf
        test/sampled/C638_FVK.cnf
        test/sampled/cnt06.shuffled.cnf
        test/sampled/huge.cnf
        test/sampled/log-1.cnf
        test/sampled/log-2.cnf
        test/sampled/log-3.cnf
        test/sampled/medium.cnf
        test/sampled/par16-1-c.cnf
        test/sampled/par16-2-c.cnf
        test/sampled/par16-2.cnf
        test/sampled/par16-3.cnf
        test/sampled/par16-5-c.cnf
        test/sampled/par16-5.cnf
        test/sampled/prob004-log-a.cnf
        test/sampled/qg1-07.cnf
        test/sampled/qg2-07.cnf
        test/sampled/qg3-08.cnf
        test/sampled/qg6-09.cnf
        test/sampled/qg7-09.cnf
        test/sampled/ra.cnf
        test/sampled/ssa7552-038.cnf
        test/sampled/tire-2.cnf
        test/sampled/tire-3.cnf
        test/sampled/tire-4.cnf
        test/sampled/uf250-017.cnf
        test/sampled/uf250-026.cnf
        test/test_cases
        test0.dSYM/Contents/Resources/DWARF/test0
        test0.dSYM/Contents/Info.plist
        tester/main.cpp
        tester/test0.cpp
        tester/test1.cpp
        tester/test2.cpp
        tester/test3.cpp
        tester/test4.cpp
        a
        Makefile
        README.md
        run.sh
        sfdd
        test0)

add_executable(SFDD ${SOURCE_FILES})